server/build_output.txt
Type-safe project accessors is an incubating feature.
> Task :game:compileKotlin UP-TO-DATE

> Task :game:compileJava
C:\Users\xandr\Documents\GitHub\Aeternal\server\game\src\main\java\com\elvarg\net\packet\impl\NPCOptionPacketListener.java:64: error: the switch expression does not cover all possible input values
        return switch (response) {
               ^
Note: C:\Users\xandr\Documents\GitHub\Aeternal\server\game\src\main\java\com\elvarg\game\entity\impl\npc\impl\Barricades.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

> Task :game:compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':game:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 13s
2 actionable tasks: 1 executed, 1 up-to-date
